# ArmFaceID-client

./: .gitignore  .gitmodules  .path_config.cmake  CMakeLists.txt  README.md  aarch64.cmake  path_config.cmake  utils.cmake
.cache/clangd/index/: core.h.2DE18B36BC1BEB82.idx  core.h.35EA0F870CD02B21.idx  core.h.98D0FED8DE729B7C.idx  main.cpp.179BC5342E8F4C5B.idx  main.cpp.95C017DC58A68A28.idx  main.cpp.9A286DD31F5B686C.idx  test.cpp.4DC0C29B51686E40.idx  test.cpp.6A6F5524744F1042.idx
assets/: AMOLED.qss  resource.qrc  style.qss
doc/: CMake如何指定库的路径.md
include/: camera.h  face_analyzer.h
include/qt_gui/: client.h  client_ui.h  notification.h  qt_gui.h  resizable_label.h
include/utils/: base.h  log.h
script/: env_config.sh
src/: camera.cpp  face_analyzer.cpp  main.cpp
src/qt_gui/: client.cpp  client_ui.cpp  notification.cpp  qt_gui.cpp  resizable_label.cpp
src/utils/: base.cpp
